# rs-recruitment

./: .cursorrules  .dockerignore  .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.deploy.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: auth-reviewer.md  ci-runner.md
.claude/hooks/: trim_pytest_output.py
.claude/rules/: auth.md  aws.md  frontend.md  infra.md  migrations.md  tests.md
.cursor/rules/: architecture.mdc  ci-cd.mdc  coding-standards.mdc  development-focus.mdc  feature-workflow.mdc  git-workflow.mdc  project-context.mdc  security.mdc  testing.mdc
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  infrastructure.md  task.md
.github/workflows/: assign-milestone.yml  ci.yml  deploy.yml  rollback.yml  security-audit.yml  stale.yml
alembic/: env.py
alembic/versions/: 03e74396e693_add_resume_filename_hash_to_application_.py  175fb94581a1_companyprofile_user_id_nullable.py  1fd9cd5dc2a8_initial_migration.py  23cb6a11a8da_feat_auth_add_remember_me_to_refresh_.py  3796f955d5c0_candidateprofile_phone_nullable.py  3d454225bd45_add_agreement_signature_to_company_.py  3f16caf9b5de_add_index_on_application_status.py  4cf71c223a38_candidateprofile_resume_filename.py  5b58a4eb507e_drop_refreshtoken_is_revoked.py  5f57f1a7cc38_add_login_lockout_columns_to_user.py  6484c273cd57_add_composite_index_application_job_.py  6c424e44ec00_add_activationtoken_full_name.py  6e26d8b21e9c_add_used_refresh_token_table.py  79bfb205c6bb_lowercase_user_emails.py  8dbec9f8ada3_rename_activation_token_user_id_and_add_.py  9eed17087de9_add_indexes_to_job_status_and_created_at.py  9fb910c7eb8d_add_job_closed_application_status.py  a1b2c3d4e5f6_add_indexes_to_job_status_and_created_at.py  a1b2c3d4e5f6_add_invite_tokens_table.py  a4b9c1e7d3f2_add_terms_and_acceptance_metadata.py  a7f9c3d2b1e5_add_job_list_covering_indexes.py  a7f9c3e1d2b4_job_fields_overhaul.py  afc9218a03de_add_contract_pdf_url_to_companyprofile.py  b00a63289dff_merge_heads.py  b3c7d9e1f2a4_add_address_and_privacy_accepted_at_to_companyprofile.py  e05ba7c8b4ac_data_export_request.py  (+15 more)
alloy/: config.alloy
docs/: AI_CONTROL_IDEAS.md  API_DESIGN.md  ARCHITECTURE.md  CONTEXT.md  GITHUB_ORGANIZATION.md  INFRASTRUCTURE.md  ISSUE_88_PLAN.md  REDIS_FAILURE_POLICY.md  RETENTION_PURGE.md  ROADMAP.md  generate_diagram.py  utm-convention.md
frontend/: .dockerignore  .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  nginx_security_headers.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
nginx/: nginx.conf
scripts/: check_file_sizes.py  deploy_ec2.sh  rollback.sh  seed_admin.py  seed_mock_data.py  smtp_debug.py  staging.sh  test_fast.sh  validate_blocking_io.py  validate_deploy_artifacts.sh  validate_imports.py  validate_test_files.py  validate_type_hints.py
src/: db.py  enums.py  main.py  models.py  schemas.py  worker.py
tests/: conftest.py  factories.py  test_auth.py  test_email.py  test_main.py  test_schemas.py  test_services_auth.py  test_storage.py  test_storage_security.py
(+542 files in other folders)
