[project]
name = "rs-recruitment"
version = "0.1.0"
description = "RS Recruitment backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pydantic[email]>=2.12",
    "pydantic-settings>=2.6.1",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=4.0.0,<5",
    "python-multipart>=0.0.6,<1",
    "boto3>=1.35.0,<2",
    "aioboto3>=12.0.0,<14",
    "slowapi>=0.1.9",
    "arq>=0.25.0,<1",
    "pymupdf>=1.24.0,<2",
    "sentry-sdk[fastapi]>=2.0.0,<3",
    "aiosmtplib>=3.0.0,<4",
    "httpx>=0.27.2",
]

[dependency-groups]
test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0.0,<8",
    "pytest-xdist>=3.0.0,<4",
    "moto[s3,ses]>=5.0.0,<6",
]
dev = [
    "ruff>=0.14.0",
    "pre-commit>=4.0.0",
    "aiosmtpd>=1.4.6,<2",
    {include-group = "test"},
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# E = pycodestyle errors
# F = Pyflakes
# I = isort
select = ["E", "F", "I"]

ignore = []

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# --durations=20 surfaces the 20 slowest tests in every run. Free diagnostic
# signal; used to validate future runtime-optimization work in the suite.
addopts = "--durations=20"
filterwarnings = [
    "ignore::DeprecationWarning:jose.*",
]
